--- a/servers/republik/package.json
+++ b/servers/republik/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@project-r/styleguide": "^9.19.3",
     "apollo-modules-node": "^0.1.4",
+    "bunyan": "^1.8.14",
     "d3-array": "^2.4.0",
     "d3-dsv": "^1.2.0",
     "d3-time": "^1.0.8",
@@ -32,7 +33,7 @@
     "yargs": "^15.3.1"
   },
   "scripts": {
-    "dev": "NODE_ENV=development nodemon $NODE_DEBUG_OPTION -w ../../packages -w express -w graphql -w lib -w modules -w .env -w package.json -w ../yarn.lock -w server.js -w index.js index.js",
+    "dev": "NODE_ENV=development nodemon $NODE_DEBUG_OPTION -w ../../packages -w express -w graphql -w lib -w modules -w .env -w package.json -w ../yarn.lock -w server.js -w index.js index.js | bunyan -o short",
     "inspect": "NODE_DEBUG_OPTION=--inspect yarn run dev",
     "start": "node index.js",
     "db:seed:redirections": "cat ../../packages/redirections/seeds/seeds.example.json | node ../../packages/redirections/seeds/seed.js",
